log
Sun 19 Mar 2023 03:19:59 AM UTC: 
 tests:  0|6
total_score: 0/70
49c04bd
Sun 19 Mar 2023 03:21:27 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:31:8: error: conflicting types for ‘createList’; have ‘List *(List *)’ {aka ‘struct List *(struct List *)’}
   31 | List * createList(List * lista) {
      |        ^~~~~~~~~~
In file included from list.c:4,
                 from test.c:5:
list.h:6:8: note: previous declaration of ‘createList’ with type ‘List *(void)’ {aka ‘struct List *(void)’}
    6 | List * createList(void);
      |        ^~~~~~~~~~
test.c: In function ‘test_create’:
test.c:84:15: error: too few arguments to function ‘createList’
   84 |     List* L = createList();
      |               ^~~~~~~~~~
In file included from test.c:5:
list.c:31:8: note: declared here
   31 | List * createList(List * lista) {
      |        ^~~~~~~~~~
Compilation failed
680b41b
Sun 19 Mar 2023 03:21:54 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:10: error: variable ‘lista’ set but not used [-Werror=unused-but-set-variable]
   32 |   List * lista = NULL;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
5422af5
Sun 19 Mar 2023 03:22:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
82aca71
